# Integator

./: .gitignore  README.md  git.py  github.py  integator.toml  main.py  pyproject.toml  pyrightconfig.json  shell.py
integator/: TaskStatus.py  __main__.py  basemodel.py  columns.py  commit.py  commit_parser.py  config.py  cons.py  emojis.py  git.py  git_log.py  log.py  log_entry.py  logging.py  main.py  monitor_impl.py  run_step.py  run_task.py  settings.py  shell.py  step_status.py  step_status_repo.py  task_status.py  task_status_repo.py  test_commit.py  test_git.py  test_log_entry.py  test_task_status.py  tui.py  watch_impl.py
integator/commands/: argument_parsing.py  check.py  init.py  log.py  run.py  tui.py  watch.py
integator/tui/: commit_list.py  detail_screen.py  details.py  main.py  tui.py
src/integator/: config.py  cons.py  git.py  main.py  monitor_impl.py  shell.py  test_git.py
